# matchesfashion_scraper

./: .gitignore  README.md  pyproject.toml  run.py  shoes.csv  shoes.json  shoes_old.csv  shoes_old.json
core/: config.py  scraper.py  utils.py
driver/: chromedriver.py
