[tool.poetry]
name = "mathcefashion"
version = "0.1.0"
description = ""
authors = ["Valeriy Vasilenko <hitehnik132@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
selenium = "^4.13.0"
python-dotenv = "^1.0.0"
isort = "^5.12.0"
colorama = "^0.4.6"
fake-useragent = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
